# socket_python_c-

./: .gitignore
client/: CMakeLists.txt  client.hpp  main.cpp
server/: client_test.py  server.py
